tests/parser/constant_err11.mtp
(* constants *)
(*missing id*)
const := 10;
begin

end
.